Added link to ESPlorer

--- a/Firmware/Firmware/Firmware.vbproj
+++ b/Firmware/Firmware/Firmware.vbproj
@@ -81,6 +81,7 @@
     <Import Include="System.Web.UI.HtmlControls" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="GlobalVariables.txt" />
     <Content Include="settings.html" />
     <Content Include="support.html" />
     <Content Include="esplux.js" />
