--- a/Firmware/Firmware/Firmware.vbproj
+++ b/Firmware/Firmware/Firmware.vbproj
@@ -82,17 +82,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="GlobalVariables.txt" />
-    <Content Include="settings.html" />
-    <Content Include="support.html" />
-    <Content Include="esplux.js" />
+    <Content Include="minified\index.html" />
+    <Content Include="styles.css" />
     <Content Include="index.html" />
-    <Content Include="jquery.min.js" />
-    <Content Include="jquery-ui.min.css" />
-    <Content Include="jquery-ui.min.js" />
-    <Content Include="jquery.slider.js" />
-    <Content Include="pure-min.css" />
-    <Content Include="side-menu.css" />
-    <Content Include="ui.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -126,6 +118,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="init.lua" />
+    <Content Include="ESPLux.lua" />
+    <Content Include="material.scss" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
@@ -136,7 +130,6 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <Content Include="setwifi.lua" />
-    <Content Include="server.lua" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
