Bodged httpserver so it didnt crash when set up as an AP

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 ESPFlasher/Config/ESP8266MAC.txt
 ESPFlasher/Config/Config.xml
 ESPFlasher/ESP8266Flasher.exe
+ESPFlasher/nodemcu_integer_0.9.6-dev_20150704.bin
